feat(oc): 美化OC查询表格